<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	tools:context="br.com.split.activities.CriarNovoEventoActivity" >

	<include
		android:id="@+id/layout_titulo"
		layout="@layout/layout_cabecalho_split" />

	<include
		android:id="@+id/layout_linha_descricao"
		layout="@layout/layout_linha_descricao"
		android:layout_width="match_parent"
		android:layout_height="wrap_content"
		android:layout_marginTop="-5dp"
		android:layout_below="@+id/layout_titulo" />

	<!-- scroll view para telas que nao comportam todo o conteudo -->

	<ScrollView
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@+id/layout_linha_descricao" >

		<!-- layout do conteudo -->

		<RelativeLayout
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:padding="10dp" >

			<!-- botao criar evento do facebook -->

			<Button
				android:id="@+id/button_criar_evento_facebook"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/button_normal_facebook"
				android:layout_marginTop="10dp"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textColor="#C0FFFFFF"
				android:onClick="onClick"
				android:text="@string/act_criar_novo_evento_button_criar_evento_facebook" />

			<!-- campo nome do evento -->

			<EditText
				android:id="@+id/edittext_nome_evento"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:layout_below="@+id/button_criar_evento_facebook"
				android:layout_marginTop="30dp"
				android:hint="@string/act_criar_novo_evento_edittext_nome_evento_hint"
				android:inputType="textCapWords" />

			<!-- botao criar evento sem facebook -->

			<Button
				android:id="@+id/button_criar_evento"
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:background="@drawable/button_normal_amarelo"
				android:layout_below="@+id/edittext_nome_evento"
				android:layout_marginTop="30dp"
				android:onClick="onClick"
				android:textAppearance="?android:attr/textAppearanceSmall"
				android:textColor="#a0000000"
				android:text="@string/act_criar_novo_evento_button_criar_evento" />
		</RelativeLayout>
	</ScrollView>

</RelativeLayout>