<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:background="@android:color/background_dark"
	tools:context="br.com.split.activities.InicializarActivity" >

	<!-- layout do logo do split -->

	<RelativeLayout
		android:id="@+id/layout_split_logo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true" >

		<TextView
			android:id="@+id/split_logo_title"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:textAppearance="?android:attr/textAppearanceLarge"
			android:textSize="@dimen/splash_text_size"
			android:textColor="@android:color/white" />

		<TextView
			android:id="@+id/split_logo_subTitle"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_below="@+id/split_logo_title"
			android:textAppearance="?android:attr/textAppearanceSmall"
			android:textColor="@android:color/white"
			android:text="@string/splash_subtext" />
	</RelativeLayout>

	<!-- layout do conteudo da activity -->

	<RelativeLayout
		android:id="@+id/layout_content"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:layout_below="@+id/layout_split_logo"
		android:paddingBottom="@dimen/activity_vertical_margin"
		android:paddingLeft="@dimen/activity_horizontal_margin"
		android:paddingRight="@dimen/activity_horizontal_margin"
		android:paddingTop="@dimen/activity_vertical_margin"
		android:layout_centerVertical="true"
		android:visibility="visible" >

		<Button
			android:id="@+id/button_novo_evento"
			android:layout_width="220dp"
			android:layout_height="wrap_content"
			android:layout_marginTop="40dp"
			android:layout_centerHorizontal="true"
			android:textColor="@android:color/white"
			android:onClick="onButtonClick"
			android:text="@string/act_inicializar_button_novo_evento" />

		<Button
			android:id="@+id/button_conta_simples"
			android:layout_width="220dp"
			android:layout_height="wrap_content"
			android:layout_below="@+id/button_novo_evento"
			android:layout_marginTop="30dp"
			android:layout_centerHorizontal="true"
			android:textColor="@android:color/white"
			android:onClick="onButtonClick"
			android:text="@string/act_inicializar_button_conta_simples" />
	</RelativeLayout>

</RelativeLayout>
